--- a/SitezinAngular/src/app/pages/home/home.component.html
+++ b/SitezinAngular/src/app/pages/home/home.component.html
@@ -8,4 +8,14 @@
     <div>
         <img src="https://a-static.mlcdn.com.br/1500x1500/adesivo-parede-frase-seja-bem-vindo-casa-lar-1-3d-fantasy/meldecor/100649/9f2d280503de115ed7ba9b40c0a3f4a6.jpg" width="250" height="250">
     </div>
+    <br>
+    <h2 style="color: aliceblue;">None of your secrets is a real secret for us</h2>
+    <br>
+    <div>
+        <input type="password" placeholder="Secret" [(ngModel)]="himitsu">
+    </div>
+    <br>
+    <div>
+    <p style="color: aliceblue;">{{himitsu}}</p>
+</div>
 </div>
